Docs: Reverted back to the css file I pushed to git to fix an issue regarding my jumbotron text not centering. Display: flex, align items: center and justify-content: center restored to fix bug

--- a/css/style.css
+++ b/css/style.css
@@ -45,30 +45,45 @@ a.nav-link {
     height: 105vh;
     background: url('../images/woman-stretching.jpg') no-repeat center center;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .refer-container {
-    height: 55vh;
+    height: 65vh;
     background: url('../images/dumbell.jpg') no-repeat center center;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .gym-container {
     height: 105vh;
     background: url('../images/gym-floor.jpg') no-repeat center center;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .sportive-container {
     height: 105vh;
     background: url('../images/ropes.jpg') no-repeat center center;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .countdown-container {
     height: 65vh;
     background: url('../images/sportive-man-dumbbell.jpg') no-repeat center center;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /*--------------------------------------------------Price container styling */
@@ -146,6 +161,8 @@ a.nav-link {
     color: #fafafa; 
 }
 
+
+
 .ask-us-anything-paragraph-container{
     padding-bottom: 15px;
 }
@@ -167,7 +184,6 @@ a.nav-link {
     background-color: #070707a8;
     padding: 10px;
     border-radius: 11px;
-    margin-top: 200px;
 }
 
 .home-image-text {
@@ -201,7 +217,7 @@ a.nav-link {
 }
 
 p.refer-text {
-    padding-top: 150px;
+    margin-top: 0;
 }
 
 .deadline-text {
@@ -233,10 +249,6 @@ p.refer-text {
 .member-story {
     font-size: 19px;
     padding-top: 13px;
-}
-
-.member-name {
-    padding-bottom: 7px;
 }
 
 .media {
@@ -273,10 +285,6 @@ div.media-body {
     font-size: 19px;
     padding-top: 13px;
 }
-
-.trainer-name {
-    padding-bottom: 7px;
-}
 /*--------------------------------------------------Gym Features */
 
 h4 {
@@ -284,12 +292,6 @@ h4 {
     color: #4b8bb9;
     word-spacing: -1px;
 }
-
-.fa-lg {
-    padding-right: 7px;
-    color: #4b8bb9;
-}
-
 
 /*--------------------------------------------------Media/Trainer/PA section*/
 
@@ -332,14 +334,6 @@ P {
 }
 
 .rounded-circle {
-    margin-bottom: 2px;
-}
-
-.gym-image {
-    margin-bottom: 25px;
-}
-
-.people-image {
     margin-bottom: 25px;
 }
 
@@ -467,7 +461,6 @@ a {
 .hide-mobile {display: none;}
 #hide-desktop {display: block;}
 .no-mobile {display: none;}
-p.refer-text {padding-top: 50px;}
 }
 #content-desktop { 
     display: block;
